root/apps/web/billing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: billing, namespace: web }
spec:
  replicas: 1
  selector: { matchLabels: { app: billing } }
  template:
    metadata: { labels: { app: billing } }
    spec:
      containers:
        - name: billing
          image: ghcr.io/fueledbycoffee/qoffice-billing:preprod-latest
          ports: [ { containerPort: 80 } ]
